--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=api
-spring.datasource.url=${URL_BANCO}
-spring.datasource.username=${USER_BANCO}
-spring.datasource.password=${PASS_BANCO}
+spring.datasource.url=jdbc:mysql://localhost:3306/sport
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
