--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=api
-spring.datasource.url=jdbc:mysql://localhost:3306/sport
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
