--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,40 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+      
+"3306:3306"
+  volumes:
+mysql_data:/var/lib/mysql
+healthcheck:
+  test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+  timeout: 20s
+  retries: 10
+
+  app:
+    build: .
+    container_name: beach-tennis-api
+    restart: always
+    depends_on:
+      mysql:
+        condition: service_healthy
+    environment:
+      DB_HOST: mysql
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+    ports:
+      
+"8080:8080"
+  networks:
+app-network
 
 volumes:
   mysql_data:
+
+networks:
+  app-network:
+    driver: bridge
